web-app/less/dashboard.less
.stretchH3
	{
	width: 100%;
	}
.paddingH3
	{
	padding-left: 10px;
	}
/*Logo and header*/
.inline
	{
	display: inline;
	}

.main-header
	{
    margin-top: 20px;
    margin-bottom: 30px;
	}

.first-row
	{
	margin-top: 20px;
	}

.logo
	{
    height:75px;
    }

/*Product Table*/
.viewButton
	{
	font-style: Nexa Bold;
	color: white;
	background-color: #818285;
	padding: 0px 8px;
	}
.alignCenter
	{
	text-align: center;
	}
th
	{
    background-color: #0a3251;
    color: white;
	}
.tableTitle
	{
	color: #be1e2d;
	margin-top: 2%;
	margin-bottom: 1%;
	font-style: Nexa Bold;
	font-size: 25px;
	}
.borderLeft
	{
	border-left: solid;
	border-left-width: 1px;
	border-left-color: #d2d1d1;
	}
/*Past Products*/
.pastProduts
	{
	border: solid;
	border-width: 2px;
	border-color: #d2d1d1;
	padding-left: 0px;
	padding-right: 0px;
	height: 200px;
	overflow-y: auto;
	}
.currentProducts
	{
	border: solid;
	border-width: 2px;
	border-color: #d2d1d1;
	padding-left: 0px;
	padding-right: 0px;
	height: 200px;
	}
/*Recent Recalls*/
.pushH3right
	{
	margin-left: 13px;
	}
.alertIcon
	{
	height: 23px;
	margin-top: -10px;
	margin-bottom: -6px;
	margin-left: -13px;
	}
.recalls
	{
	height: 200px;
	overflow-y: auto;
	}
span.bullet
	{
	font-size: 10px;
  	color: #b81e30;
	}
.reasonName
	{
	margin-left: 31px;
	}
.reasonDescription
	{
	margin-left: 45px;
	margin-top: 10px;
	margin-bottom: 10px;
	}
/*Nav toggle*/
.nav-tabs
	{
  border-bottom: 8px solid #002143;
	}

.select2-container .select2-selection--single 
	{
    height: 34px;
	}

